--- a/week01/style/layout.css
+++ b/week01/style/layout.css
@@ -9,6 +9,46 @@ body {
     padding: 2rem;
     grid-column: 1 / 4;
   }
+  nav {
+	margin: 0 auto 2rem;
+	max-width: 90vw;
+}
+
+.modern a {
+	flex: 1 1 100%;
+}
+
+.navigation {
+	list-style: none;
+	display: flex;
+	background-color: #333;
+	align-items: center;
+}
+.navigation li {
+	flex: 1 1 auto; /* difference between auto and 100% flex-basis - turn on link borders to view */
+}
+.navigation a {
+	display: block;
+	color: #eee;
+	padding: 0.75rem;
+	text-decoration: none;
+	text-align: center;
+/* 	border: 1px dotted cyan; */
+}
+.navigation a:hover {
+	font-weight: 700;
+	text-decoration: underline;
+	text-decoration-color: yellow;
+}
+
+.wrap {
+		flex-wrap: wrap;
+}
+
+p {
+	text-align: center;
+	font-size: smaller;
+}
   
   .left-sidebar {
     background: lightblue;
