--- a/styles/temples.css
+++ b/styles/temples.css
@@ -10,7 +10,7 @@ body {
 }
 
 header {
-    background-color: hsl(41, 57%, 25%);
+    background-color: hsl(238, 62%, 46%);
     padding: 20px;
     display: grid;
     grid-gap: 1rem;
@@ -29,7 +29,7 @@ h1 {
     font-size: 1.5rem;
     background: none;
     border: 0;
-    color: #000;
+    color: #000000;
     position: absolute;
     top: 1rem;
     right: 1rem;
@@ -56,7 +56,6 @@ nav {
     display: flex;
     flex-direction: column;
     list-style: none;
-    background-color: #3d1b64;
     color: white;
 }
 
@@ -69,7 +68,7 @@ nav {
 }
 
 .navigation a:hover {
-    background-color: #6d7585;
+    background-color: #999da482;
     border-radius: 5px;
     text-decoration: underline;
     font-weight: 700;
@@ -127,7 +126,7 @@ footer {
     text-align: center;
     padding-top: 1rem;
     padding-bottom: 1rem;
-    background-color:hsl(41, 57%, 25%);
+    background-color: hsl(238, 62%, 46%);
     color: white;
     font-size: 15px;
     height: auto;
