--- a/styles/temples.css
+++ b/styles/temples.css
@@ -63,7 +63,7 @@ nav {
     display: none;
     color: white;
     text-align: center;
-    padding: 1rem;
+    padding: rem;
     text-decoration: none;
 }
 
