--- a/styles/siteplan.css
+++ b/styles/siteplan.css
@@ -1,7 +1,7 @@
 header {
     background-color: rgb(37, 109, 133);
     text-align: center;
-    font-family:serif;
+    font-family: sans-serif;
     font-size: 30px;
     color:white ;
     padding: 1.5rem;
@@ -16,7 +16,7 @@ body{
 
 h4{
     background-color: rgb(71, 181, 255);
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: Georgia;
 }
 
 .image-box {
