--- a/styles/siteplan.css
+++ b/styles/siteplan.css
@@ -16,7 +16,7 @@ body{
 
 h4{
     background-color: rgb(71, 181, 255);
-    font-family: Georgia;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .image-box {
