--- a/styles/car.css
+++ b/styles/car.css
@@ -1,38 +1,19 @@
-.card {
-    width: 400px;
-    aspect-ratio: 1 /0.7;
-    border-radius: 8px;
-    position: relative;
-}
 
-.card .image-box img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    transition: 0.5s ease-in-out;
-}
-.card::after {
-    content: "";
-    position: absolute;
-    inset: 0;
-    border: 2px solid white;
-    border-radius: inherit;
-    opacity: 0;
-    transition: 0.4s ease-in-out;
-}
-.card:hover img {
-    filter: grayscale(1) 
-    brightness(0.4);
-}
-.card:hover::after {
-    opacity: 1;
-    inset: 20px;
-}
-.card:hover .content h2 {
-    scale: 1;
-    opacity: 1;
-}
-.card:hover .content p {
-    opacity: 1;
-    transform: translateY(0);
+
+.image-container {  
+    position: relative;  
+    display: inline-block;  
+}  
+
+.image {  
+    display: block;  
+    transition: filter 0.3s ease; /* Smooth transition for filter */  
+}  
+
+#image1:hover + #image2 {  
+    filter: brightness(20%); /* Darken image 2 when image 1 is hovered */  
+}  
+
+#image2:hover {  
+    filter: brightness(50%); /* Darken image 1 when image 2 is hovered */  
 }
