--- a/project/styles/index.css
+++ b/project/styles/index.css
@@ -9,7 +9,7 @@
     justify-items: center;
     gap: 12px;
     height: 100vh;
-    font-family: "Inter", sans-serif;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: 400;
     font-style: normal;
     margin: 0;
@@ -37,8 +37,8 @@ nav:hover{
     counter-reset: #fff ;
 }
   
-  #menu {
-	font-size: 1.5rem;
+#menu {
+  font-size: 1.5rem;
     font-weight:700;
     background: none;
     border: 0;
@@ -52,13 +52,12 @@ nav:hover{
 	content: "≡";
 }
   
-  
-  .navigation {
+.navigation {
     display: flex;
     gap: 16px;
-  }
+}
   
-  .navigation a {
+.navigation a {
     font-size: 1em;
     font-weight: 800;
     text-align: center;
@@ -79,6 +78,7 @@ footer {
   
   header {
     display: flex;
+    font-family: sans-serif;
     justify-content: space-between;
     align-items: center;
     position: relative;
